# NGProject

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  client  hangclient.c  install.sh  install.sh~  installOSX.sh  server  words  words~
example/unpv13e/intro/: byteorder  daytimetcpcli  daytimetcpcli1  daytimetcpcli2  daytimetcpcli3  daytimetcpcliv6  daytimetcpsrv  daytimetcpsrv1  daytimetcpsrv2  daytimetcpsrv3  daytimetcpsrvv6
example/unpv13e/lib/: .unp.h.swp
example/unpv13e/select/: tcpcli01  tcpcli02  tcpcli03
fork/: .cproject  .project  makefile  server
fork/client/: .cproject  hangclient.c
fork/client/Debug/: client  hangclient.d
fork/fork_client/: .cproject  .project  CMakeLists.txt
fork/fork_client/Debug/: fork_client  makefile  objects.mk
fork/fork_client/includes/: Definitions.h  Sockets.h  definitions.h
fork/fork_server/: .cproject  .project  CMakeLists.txt  hangserver_iter.c
fork/server/: .cproject  hangserver_iter.c
libhangman/: CMakeLists.txt  buildLinux.sh  buildOSX.sh  game.c  game.h  hangman.c  hangman.h
libhangman/libs/: libhangman.dylib
libsocket/: .cproject  CMakeLists.txt  Sockets.c  Sockets.h  buildLinux.sh  buildOSX.sh  libsocket.dylib  socket.c  socket.h
libsocket/libs/: libsocket.dylib
select/select_client/: .cproject  .project
select/select_server/: .cproject  .project
udp/: client
udp/udp_client/: .cproject  CMakeLists.txt  README.md  hangclient.c
udp/udp_client/Debug/: makefile  sources.mk  udp_client
udp/udp_client/Debug/src/: subdir.mk  udp_client.d
udp/udp_client/src/: clientUDP  makefile  udp_client.c
udp/udp_server/: .cproject  CMakeLists.txt  README.md
(+68 files in other folders)
